Uploaded image for project: 'Apache Arrow'
  1. Apache Arrow
  2. ARROW-2275

[C++] Buffer::mutable_data_ member uninitialized

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Resolved
    • Minor
    • Resolution: Fixed
    • 0.8.0
    • 0.9.0
    • C++

    Description

      For immutable buffers (i.e. most of them), the mutable_data_ member is uninitialized. If the user calls mutable_data() by mistake on such a buffer, they will get a bogus pointer back.

      This is exacerbated by the Tensor API whose const and non-const raw_data() methods return different things...

      (also an idea: add a DCHECK for mutability before returning from mutable_data()?)

      Attachments

        Issue Links

          Activity

            People

              Unassigned Unassigned
              apitrou Antoine Pitrou
              Votes:
              0 Vote for this issue
              Watchers:
              4 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved: