ARROW-2275: [C++] Guard against bad use of Buffer.mutable_data()